=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.2.x CA
 - This Branch and the Trunk are now both at svn level 5955 (windmillway) 
 - Merged: Correction to pick up missing svn changes - Merge changes r5944 - r5952 from the trunk. (windmillway)
 - Changes arrived during last update, not sure why, but will commit anyway to clean svn. (windmillway)
 - Merged: Merge changes r5915 - r5943 from the trunk. (yalnifj)
 - Added module administration page (yalnifj)
 - Added new module tab and menu system (yalnifj)
 - Removed slideshow module as the lightbox module depricates it (yalnifj)
 - Changed replace dhtmlxtabbar with jquery.ui.tabs, added jquery.ui theme directory to all themes (yalnifj)
 - Merged: Merge changes r5843 - r5914 from the trunk. (windmillway)
 - Merged: Merge changes r5839 - r5842 from the trunk. (windmillway)
 - Removed an unnecessary function, that was also being called multiple times, causing duplicate declaration errors. (windmillway)
 - Merged: Merge changes r5831 - r5838 from the trunk. (windmillway)
 - Merged: Merge changes r5824 - r5830 from the trunk. (windmillway)
 - Merged: Merge changes r5591 - r5823 from the trunk. (windmillway)
 - Merged: Merge changes r5565 - r5590 from the trunk. (windmillway)
 - Changed: Tidy up of files in GEDFact_assistant/MEDIA/ subdirectory (windmillway)
 - Merged: Merge changes r5520 - r5564 from the trunk. (windmillway)
 - Changed: Changes due to core file class re-arrangement. (windmillway)
 - Changed: Cleanup GEDFact_assistant/MEDIA/ sub module code -  Still Link removals to do. -  (windmillway)
 - Merged: Merge changes r5509 - r5519 from the trunk. (windmillway)
 - Changed: Finalised "Add GEDFact_assistant/MEDIA/ sub module and core files. -  Still Link removals to do. -  (windmillway)